tests/baselines/reference/VariableDeclaration11_es6.errors.txt
tests/cases/conformance/es6/variableDeclarations/VariableDeclaration11_es6.ts(2,4): error TS1123: Variable declaration list cannot be empty.


==== tests/cases/conformance/es6/variableDeclarations/VariableDeclaration11_es6.ts (1 errors) ====
    "use strict";
    let
       
!!! error TS1123: Variable declaration list cannot be empty.